--- a/MvcFlash.Sample/Views/Shared/_Layout.cshtml
+++ b/MvcFlash.Sample/Views/Shared/_Layout.cshtml
@@ -5,7 +5,12 @@
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
     <script src="@Url.Content("~/Scripts/jquery-1.4.4.min.js")" type="text/javascript"></script>
 </head>
-
+<ul>
+    <li>@Html.ActionLink("Simple", "Index", "Home")</li>
+    <li>@Html.ActionLink("Flash Only", "FlashOnly", "Home")</li>
+    <li>@Html.ActionLink("Flash Only w/ Lambda", "FlashOnlyLambda", "Home")</li>
+    <li>@Html.ActionLink("With Partial", "WithPartial", "Home")</li>
+</ul>
 <body>
     @RenderBody()
 </body>
