--- a/MvcFlash.Sample/Views/Shared/OtherFlash.cshtml
+++ b/MvcFlash.Sample/Views/Shared/OtherFlash.cshtml
@@ -1,4 +1,7 @@
 ﻿@model MvcFlash.Core.Models.FlashContext
 
-<h2>@Model.Message.Text</h2>
-<p>Yes This is the other flash</p>
+<div id="@Model.Message.Type-@Model.Index" class="@Model.Message.Type">
+    @Model.Message.Text
+    <p>Yes This is the other flash</p>
+</div>
+        
