--- a/MvcFlash.Sample/Views/Home/WithPartial.cshtml
+++ b/MvcFlash.Sample/Views/Home/WithPartial.cshtml
@@ -1,7 +1,33 @@
 ﻿@{
     ViewBag.Title = "WithPartial";
 }
-
-<h2>WithPartial</h2>
-
-@Html.Flash((ctx) => Html.Partial("OtherFlash", ctx))
+<h2>
+    WithPartial</h2>
+<p>
+    Using this version of flash, you are able to pass in a lambda expression that takes
+    a FlashContext object. A flash context consists of total count of messages, current
+    index, and the message itself. I would only use this in extreme situations.
+</p>
+<div class="section">
+    <h2>
+        In The Controller</h2>
+    <pre class="brush: csharp;">
+        public ActionResult Index()
+        {
+            Flash.Success("WooHoo!");
+            return View();
+        }
+    </pre>
+</div>
+<div class="section">
+    <h2>
+        In The View</h2>
+    <pre class="brush: csharp;">
+        @@Html.Flash((ctx) => Html.Partial("OtherFlash", ctx))
+    </pre>
+</div>
+<div class="section">
+    <h2>
+        Result</h2>
+    @Html.Flash((ctx) => Html.Partial("OtherFlash", ctx))
+</div>
