fixing cause of httpcontext.items, using session now.

--- a/MvcFlash.Sample/Views/Shared/_Layout.cshtml
+++ b/MvcFlash.Sample/Views/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
     <li>@Html.ActionLink("With Partial", "WithPartial", "Home")</li>
     <li>@Html.ActionLink("Flash Select", "FlashSelect", "Home")</li>
     <li>@Html.ActionLink("Flash Push (Custom)", "Custom", "Home")</li>
+    <li>@Html.ActionLink("Redirect", "TryRedirect", "Home")</li>
 </ul>
 <body>
     @RenderBody()
