--- a/MvcFlash.Sample/Views/Shared/_Layout.cshtml
+++ b/MvcFlash.Sample/Views/Shared/_Layout.cshtml
@@ -3,6 +3,7 @@
 <head>
     <title>@ViewBag.Title</title>
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/Content/flash/style.css")" rel="stylesheet" type="text/css" />
     <script src="@Url.Content("~/Scripts/jquery-1.4.4.min.js")" type="text/javascript"></script>
     <script type="text/javascript" src="@Url.Content("~/scripts/syntaxhighlighter/scripts/shCore.js")"></script>
 	<script type="text/javascript" src="@Url.Content("~/scripts/syntaxhighlighter/scripts/shBrushCSharp.js")"></script>
