made unique feature, and added attributes.

--- a/MvcFlash.Sample/Views/Shared/_Layout.cshtml
+++ b/MvcFlash.Sample/Views/Shared/_Layout.cshtml
@@ -19,8 +19,11 @@
     <li>@Html.ActionLink("Flash Select", "FlashSelect", "Home")</li>
     <li>@Html.ActionLink("Flash Push (Custom)", "Custom", "Home")</li>
     <li>@Html.ActionLink("Redirect", "TryRedirect", "Home")</li>
+	<li>@Html.ActionLink("Unique", "Unique", "Home")</li>
+	<li>@Html.ActionLink("Attributes", "Attributes", "Home")</li>
 </ul>
 <body>
     @RenderBody()
 </body>
 </html>
+
